--- a/server/libraries/td-apiserver/Cargo.toml
+++ b/server/libraries/td-apiserver/Cargo.toml
@@ -4,13 +4,18 @@
 
 [package]
 description = "Tabsdata Apiserver"
-edition = { workspace = true }
 name = "td-apiserver"
-publish = false
+build = "build.rs"
+
+authors = { workspace = true }
+edition = { workspace = true }
+homepage = { workspace = true }
+license = { workspace = true }
+publish = { workspace = true }
+readme = { workspace = true }
+repository = { workspace = true }
 rust-version = { workspace = true }
 version = { workspace = true }
-license = { workspace = true }
-authors = { workspace = true }
 
 [lib]
 
@@ -33,6 +38,8 @@ ignored = ["clap", "openssl", "strum_macros"]
 [build-dependencies]
 
 # Internal dependencies
+
+td-build = { workspace = true }
 
 # External dependencies
 
