[TD-305] Executor and scheduler tests and tests improvements

--- a/server/libraries/ta-execution/Cargo.toml
+++ b/server/libraries/ta-execution/Cargo.toml
@@ -28,7 +28,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "thiserror"]
+ignored = ["openssl", "ta-execution", "thiserror"]
 
 # Build dependencies
 
@@ -61,6 +61,8 @@ tokio = { workspace = true, features = ["full"] }
 # Development dependencies
 
 [dev-dependencies]
+ta-execution = { workspace = true, features = ["td-test"] }
+td-objects = { workspace = true, features = ["td-test"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
