--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -171,6 +171,7 @@ serde_yaml = { workspace = true }
 sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
 strum = { workspace = true }
 strum_macros = { workspace = true }
+supports-color = { workspace = true }
 sysinfo = { workspace = true }
 tabled = { workspace = true }
 tempfile = { workspace = true }
