--- a/extensions/rust/te-apiserver/Cargo.toml
+++ b/extensions/rust/te-apiserver/Cargo.toml
@@ -30,7 +30,7 @@ test_logging = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl"]
+ignored = ["openssl", "td-build"]
 
 # Build dependencies
 
