--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -60,6 +60,7 @@ td-tower = { workspace = true }
 
 # External dependencies
 
+aquamarine = { workspace = true }
 async-trait = { workspace = true }
 axum = { workspace = true }
 constcat = { workspace = true }
@@ -67,6 +68,7 @@ chrono = { workspace = true, features = ["serde"] }
 derive_builder = { workspace = true }
 derive-new = { workspace = true }
 getset = { workspace = true }
+itertools = { workspace = true }
 lazy_static = { workspace = true }
 paste = { workspace = true }
 regex = { workspace = true }
