[TD-371] Patch crate zip to github tag v2.6.1 until utoipa crates depend on 3.0.0 (as 2.6.* versions are now yanked) (#289)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -560,3 +560,6 @@ ta-tableframe = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
+
+[patch.crates-io]
+zip = { git = "https://github.com/zip-rs/zip2", tag = "v2.6.1" }
