[TD-333] Tables REST API skeleton (#253)
[TD-333] Tables REST API skeleton

  * list table API
  * list table data versions API
  * using id_name for the query string param at for DataVersionId or AtTime
  * new td_type::QueryParam macro for parsing query-string parameters

Adding authz check to all table endpoints

Normalize modules/services names

fix delete tests

fixing AtMulti serde

[TD-333]: https://tabsdata.atlassian.net/browse/TD-333?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/server/libraries/td-services/Cargo.toml
+++ b/server/libraries/td-services/Cargo.toml
@@ -68,6 +68,7 @@ te-execution = { workspace = true }
 argon2 = { workspace = true }
 async-trait = { workspace = true }
 axum = { workspace = true }
+bytes = { workspace = true }
 chrono = { workspace = true }
 futures = { workspace = true }
 getset = { workspace = true }
