[TD-243] apiserver mount Options extractor (#262)

--- a/client/td-sdk/pytest.ini
+++ b/client/td-sdk/pytest.ini
@@ -11,6 +11,7 @@ markers =
     integration: mark a test as a integration test.
     mariadb: mark test as requiring a mariadb docker container.
     mongodb: mark tests that require the tabsdata_mongodb package.
+    mount_extractor: tests for the mount_extractor tool in tabsserver.
     mysql: mark test as requiring a mysql docker container.
     oracle: mark test as requiring a oracle docker container. Also, the Oracle Instant Client must be installed.
     performance: mark tests that will be run in a purely performance environment. The
