[TD-343] Add filter and sort annotations to list DTOs (#263)
[TD-343] Add filter and sort annotations to list DTOs

Using axum extra for query params handling to support multi-values

[TD-343]: https://tabsdata.atlassian.net/browse/TD-343?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/server/libraries/td-apiserver/Cargo.toml
+++ b/server/libraries/td-apiserver/Cargo.toml
@@ -69,8 +69,8 @@ te-execution = { workspace = true }
 
 # External dependencies
 
-axum = { workspace = true }
-axum-extra = { workspace = true }
+axum = { workspace = true}
+axum-extra = { workspace = true, features = ["query"] }
 chrono = { workspace = true }
 clap = { workspace = true }
 clap_derive = { workspace = true }
