--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -71,6 +71,7 @@ getset = { workspace = true }
 itertools = { workspace = true }
 lazy_static = { workspace = true }
 paste = { workspace = true }
+polars = { workspace = true }
 regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
