--- a/client/td-sdk/pytest.ini
+++ b/client/td-sdk/pytest.ini
@@ -20,6 +20,7 @@ markers =
     postgres: mark test as requiring a postgresql docker container.
     requires_internet: mark those tests that require an Internet connection to be run.
     salesforce: mark tests that require the tabsdata_salesforce package.
+    snowflake: mark tests that require the tabsdata_snowflake package.
     slow: mark test as slow.
     tableframe: mark a test that validates the TableFrame API.
 
