--- a/expansions/polars/modules/ty-tableframe/pyproject.toml
+++ b/expansions/polars/modules/ty-tableframe/pyproject.toml
@@ -41,9 +41,11 @@ known_first_party = [
     "tabsdata",
     "tabsdata_mongodb",
     "tabsdata_salesforce",
+    "tabsdata_snowflake",
     "tests_tabsdata",
     "tests_tabsdata_mongodb",
     "tests_tabsdata_salesforce",
+    "tests_tabsdata_snowflake",
     "tests_ta_features",
     "tests_ta_tableframe",
     "tests_te_tableframe",
