--- a/connectors/python/tabsdata_salesforce/pyproject.toml
+++ b/connectors/python/tabsdata_salesforce/pyproject.toml
@@ -27,6 +27,7 @@ known_first_party = [
     "tabsdata",
     "tabsdata_mongodb",
     "tabsdata_salesforce",
+    "tabsdata_snowflake",
     "td_features",
     "ta_tableframe",
     "te_tableframe",
