--- a/connectors/python/tabsdata_salesforce/pytest.ini
+++ b/connectors/python/tabsdata_salesforce/pytest.ini
@@ -16,6 +16,7 @@ markers =
     requires_internet: mark those tests that require an Internet connection to be run.
     salesforce: mark tests that require the tabsdata_salesforce package.
     slow: mark test as slow.
+    snowflake: mark tests that require the tabsdata_snowflake package.
     tableframe: mark a test that validates the TableFrame API.
 
 addopts = --tb=short
