--- a/make/fragments/tasks/clean_py.toml
+++ b/make/fragments/tasks/clean_py.toml
@@ -13,6 +13,7 @@ run_task = [
         "clean_py_tabsdata",
         "clean_py_tabsdata_mongodb",
         "clean_py_tabsdata_salesforce",
+        "clean_py_tabsdata_snowflake",
         "clean_py_all",
     ] }
 ]
@@ -58,3 +59,9 @@ category = "01 - Clean"
 private = true
 command = "python"
 args = ["${CLEAN_PY}", "${PROJECT_PY_TABSDATA_SALESFORCE_FOLDER}", "py"]
+
+[tasks.clean_py_tabsdata_snowflake]
+category = "01 - Clean"
+private = true
+command = "python"
+args = ["${CLEAN_PY}", "${PROJECT_PY_TABSDATA_SNOWFLAKE_FOLDER}", "py"]
