--- a/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
@@ -56,6 +56,7 @@ controllers:
         concurrency: 8
         retries: 2
         arguments:
+          - work
           - locks-folder
           - logs-folder
           - bin-folder
