--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -207,6 +207,9 @@ jobs:
       SALESFORCE_USERNAME: ${{ secrets.SALESFORCE_USERNAME }}
       SALESFORCE_PASSWORD: ${{ secrets.SALESFORCE_PASSWORD }}
       SALESFORCE_SECURITY_TOKEN: ${{ secrets.SALESFORCE_SECURITY_TOKEN }}
+      TD_SNOWFLAKE_ACCOUNT: ${{ secrets.TD_SNOWFLAKE_ACCOUNT }}
+      TD_SNOWFLAKE_USER: ${{ secrets.TD_SNOWFLAKE_USER }}
+      TD_SNOWFLAKE_PASSWORD: ${{ secrets.TD_SNOWFLAKE_PASSWORD }}
     with:
       job_timeout: ${{ fromJson(needs.cap-job.outputs.job_timeout) }}
       td_product: "standard"
